@@ -2,8 +2,8 @@
 import sys
 from os.path import abspath, dirname, join
 
-from tests.fixtures import (elasticapm_client, sending_elasticapm_client,
-                            validating_httpserver)
+from tests.fixtures import (elasticapm_client, not_so_random,
+                            sending_elasticapm_client, validating_httpserver)
 from tests.utils.compat import middleware_setting
 
 try:
