@@ -157,6 +157,7 @@ class Config(_ConfigBase):
         'elasticapm.processors.sanitize_http_request_body',
     ])
     transaction_send_frequency = _ConfigValue('TRACES_SEND_FREQ', type=int, default=60)
+    transaction_sample_rate = _ConfigValue('TRANSACTION_SAMPLE_RATE', type=float, default=1.0)
     max_event_queue_length = _ConfigValue('MAX_EVENT_QUEUE_LENGTH', type=int, default=500)
     collect_local_variables = _ConfigValue('COLLECT_LOCAL_VARIABLES', default='errors')
     collect_source = _ConfigValue('COLLECT_SOURCE', default='all')
